[project]
name = "estate-document-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.24",
    "openai>=1.25",
    "pydantic>=2.7",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.0",
    "streamlit>=1.45.1",
]
